Epic 70095 Distributed Sessions (#3763)
* Bug #74007: disable 'Labels on Opposite Side' option for 3D bar charts (#2958)

The option does not render correctly on 3D bar charts (axis disappears),
so hide it the same way it is already hidden for Radar and Mekko charts.

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>

* Bug #74013: fix axis 'Labels on Opposite Side' lost when switching between single and separated chart (#2960)

Root cause (two issues, both in ChangeSeparateStatusProcessor):

1. copyAxisAttributes() omitted labelOnSecondaryAxis
   When toggling between single/separated mode, fixMultiAxisProperties() and
   fixSingleAxisProperties() call copyAxisAttributes() to propagate axis visual
   settings between the global AxisDescriptor and each Y-field's individual
   AxisDescriptor. The property labelOnSecondaryAxis ("Labels on Opposite Side")
   was not included in that copy, so the setting was silently dropped on every
   mode switch.

2. Stale RT ref descriptors overwrite the corrected binding ref descriptors
   Even after fix #1, the setting was lost at render time. VSChartInfo.update()
   calls getRTRefsWithDescriptors(), which preserves axis descriptors by copying
   them from the OLD runtime ChartRef objects to the newly generated ones. Those
   old runtime refs were created during the previous render cycle—before
   process() ran—so their axis descriptors still carry the stale
   labelOnSecondaryAxis=false value. Because clearRuntime() only nulls the RT
   AxisDescriptor (rdesc) on each ref and never clears the ryrefs/rxrefs arrays,
   the stale runtime refs remain and getRTRefsWithDescriptors() overwrites the
   values that process() just set on the binding refs.

Fix:
- Add axisDesc.setLabelOnSecondaryAxis(sourceDesc.isLabelOnSecondaryAxis()) to
  copyAxisAttributes() so the property is included in mode-switch propagation.
- After fixAxisProperties() updates the binding refs, call
  info.setRTYFields(new ChartRef[0]) and info.setRTXFields(