@@ -18,12 +18,14 @@
 package inetsoft.web.admin.deploy;
 
 import inetsoft.report.LibManager;
+import inetsoft.report.LibManagerProvider;
 import inetsoft.report.style.XTableStyle;
 import inetsoft.sree.*;
 import inetsoft.sree.internal.*;
-import inetsoft.sree.security.SecurityException;
 import inetsoft.sree.security.*;
+import inetsoft.sree.security.SecurityException;
 import inetsoft.sree.web.dashboard.DashboardRegistry;
+import inetsoft.sree.web.dashboard.DashboardRegistryManager;
 import inetsoft.uql.asset.*;
 import inetsoft.uql.asset.internal.AssetUtil;
 import inetsoft.uql.erm.*;
@@ -32,20 +34,19 @@ import inetsoft.util.*;
 import inetsoft.util.audit.ActionRecord;
 import inetsoft.util.dep.*;
 import inetsoft.web.admin.content.repository.ContentRepositoryTreeService;
-import inetsoft.web.admin.content.repository.RepletRegistryManager;
+import inetsoft.web.admin.content.repository.RepletRegistryService;
 import inetsoft.web.admin.content.repository.model.*;
 import inetsoft.web.security.auth.MissingResourceException;
 import inetsoft.web.viewsheet.DatasourceIgnoreGlobalShare;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 
 import java.io.*;
 import java.security.Principal;
 import java.sql.Timestamp;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.regex.Matcher;
@@ -55,11 +56,24 @@ import java.util.zip.GZIPInputStream;
 
 @Service
 public class DeployService {
+   @Autowired
    public DeployService(ContentRepositoryTreeService contentRepositoryTreeService,
-                        SecurityEngine securityEngine)
+                        SecurityEngine securityEngine,
+                        DataSourceRegistry dataSourceRegistry,
+                        IndexedStorage indexedStorage, DeployManagerService deployManagerService,
+                        DashboardRegistryManager dashboardRegistryManager,
+                        LibManagerProvider libManagerProvider,
+                        FileSystemService fileSystemService, RepletRegistryService registryManager)
    {
       this.contentRepositoryTreeService = contentRepositoryTreeService;
       this.securityEngine = securityEngine;
+      this.dataSourceRegistry = dataSourceRegistry;
+      this.indexedStorage = indexedStorage;
+      this.deployManagerService = deployManagerService;
+      this.dashboardRegistryManager = dashboardRegistryManager;
+      this.libManagerProvider = libManagerProvider;
+      this.fileSystemService = fileSystemService;
+      this.registryManager = registryManager;
    }
 
    public ImportJarProperties setJarFile(String fpath, boolean gzipped) throws Exception {
@@ -67,7 +81,7 @@ public class DeployService {
          throw new Exception(Catalog.getCatalog().getString("em.replet.uploadFile.noFile"));
       }
 
-      File file = FileSystemService.getInstance().getFile(fpath);
+      File file = fileSystemService.getFile(fpath);
       InputStream in = new BufferedInputStream(new FileInputStream(file));
 
       if(gzipped) {
@@ -85,12 +99,11 @@ public class DeployService {
          .build();
    }
 
-   public ExportedAssetsModel getJarFileInfo(DeploymentInfo info, Principal principal)
-   {
-      return getJarFileInfo(info, null, principal);
+   public ExportedAssetsModel getJarFileInfo(DeploymentInfo info, Principal principal) {
+      return getJarFileInfo(UUID.randomUUID().toString(), info, null, principal);
    }
 
-   public ExportedAssetsModel getJarFileInfo(DeploymentInfo info,
+   public ExportedAssetsModel getJarFileInfo(String importId, DeploymentInfo info,
                                              ImportTargetFolderInfo targetFolderInfo,
                                              Principal principal)
    {
@@ -124,7 +137,7 @@ public class DeployService {
                .dateFormat(Tool.getDateFormatPattern())
                .user(entry.getUser());
 
-            if(!SecurityEngine.getSecurity().isSecurityEnabled() &&
+            if(!securityEngine.isSecurityEnabled() &&
                (Tool.equals(entry.getType(), WSAutoSaveAsset.AUTOSAVEWS) ||
                Tool.equals(entry.getType(), VSAutoSaveAsset.AUTOSAVEVS)))
             {
@@ -138,7 +151,7 @@ public class DeployService {
                XAsset asset = DeployUtil.createAsset(entry);
 
                if(asset instanceof FolderChangeableAsset) {
-                  XAsset changeRootFolderAsset = DeployManagerService.getChangeRootFolderAsset(asset,
+                  XAsset changeRootFolderAsset = deployManagerService.getChangeRootFolderAsset(asset,
                      targetFolderInfo.getTargetFolder(), null, importCommonPrefix,
                      true, helper.getDependencies(asset), changedMap, true);
 
@@ -186,7 +199,7 @@ public class DeployService {
                XAsset asset = DeployUtil.getAsset(dependentAssets.get(i));
 
                if(asset instanceof FolderChangeableAsset || asset instanceof XQueryAsset) {
-                  XAsset changeRootFolderAsset = DeployManagerService.getChangeRootFolderAsset(asset,
+                  XAsset changeRootFolderAsset = deployManagerService.getChangeRootFolderAsset(asset,
                      targetFolderInfo.getTargetFolder(), null, importCommonPrefix,
                      true, helper.getDependencies(asset), changedMap, true);
 
@@ -231,10 +244,8 @@ public class DeployService {
          }
       }
 
-      String deploymentDate = new SimpleDateFormat(SreeEnv.getProperty("format.date.time"))
-         .format(jarInfo.getDeploymentDate());
-
       return ExportedAssetsModel.builder()
+         .importId(importId)
          .name(jarInfo.getName())
          .dateFormat(Tool.getDateFormatPattern())
          .deploymentDate(jarInfo.getDeploymentDate().getTime())
@@ -406,9 +417,10 @@ public class DeployService {
          }
       }
 
-      SecurityProvider provider = SecurityEngine.getSecurity().getSecurityProvider();
+      SecurityProvider provider = securityEngine.getSecurityProvider();
       boolean noUsers = users.isEmpty() ||
-         users.size() == 1 && (users.contains("anonymous") || users.contains("_NULL_")) ||
+         users.size() == 1 &&
+         users.stream().anyMatch(id -> id != null && ("anonymous".equals(id.getName()) || "_NULL_".equals(id.getName()))) ||
          onlyScheduleTaskUsers;
 
       try {
@@ -416,7 +428,7 @@ public class DeployService {
             // if auto save has administrator, support import auto save assets.
             // if no security, only can login em by admin.
          }
-         else if(!noUsers && !SecurityEngine.getSecurity().isSecurityEnabled()) {
+         else if(!noUsers && !securityEngine.isSecurityEnabled()) {
             throw new Exception(
                Catalog.getCatalog().getString("em.import.userNoSecurity"));
          }
@@ -438,16 +450,16 @@ public class DeployService {
          ActionRecord.ACTION_NAME_IMPORT, null, null);
       AnalyticRepository repository = SUtil.getRepletRepository();
 
-      if(repository instanceof RepletEngine) {
-         List<String> list = new ArrayList<>();
-         list.addAll(ignoreUserAssets);
+      if(repository.isWrapperFor(RepletEngine.class)) {
+         RepletEngine engine = repository.unwrap(RepletEngine.class);
+         List<String> list = new ArrayList<>(ignoreUserAssets);
          List<String> privateSembeddedData = info.getJarInfo().getDependeciesMap().get("privateSembeddedData");
 
          if(privateSembeddedData != null) {
             list.addAll(privateSembeddedData);
          }
 
-         List<String> failedAssets = ((RepletEngine) repository).importAssets(
+         List<String> failedAssets = engine.importAssets(
             overwriting, info.getProperties().fileOrders(), info, false, principal, ignoreList,
             targetFolderInfo, actionRecord, list);
          return ImportAssetResponse.builder()
@@ -509,7 +521,7 @@ public class DeployService {
          }
 
          if(targetFolderAsset == null) {
-            final DataSourceRegistry registry = DataSourceRegistry.getRegistry();
+            final DataSourceRegistry registry = dataSourceRegistry;
 
             if(registry.getDataSourceFolder(targetFolder) != null) {
                targetFolderAsset = new AssetEntry(AssetRepository.QUERY_SCOPE,
@@ -552,53 +564,6 @@ public class DeployService {
             "Failed to import the following assets: " +
             String.join(", ", response.failedAssets()));
       }
-   }
-
-   public ExportJarProperties createExport(ExportedAssetsModel exportedAssetsModel, Principal principal)
-      throws Exception
-   {
-      String name = Tool.byteDecode(exportedAssetsModel.name());
-      boolean overwriting = exportedAssetsModel.overwriting();
-      List<SelectedAssetModel> entryData = exportedAssetsModel.selectedEntities();
-      List<RequiredAssetModel> assetData = exportedAssetsModel.dependentAssets();
-      List<XAsset> assets = getEntryAssets(entryData, principal);
-      List<PartialDeploymentJarInfo.SelectedAsset> entryDataArray = DeployUtil.getEntryData(assets);
-      assert assetData != null;
-      List<PartialDeploymentJarInfo.RequiredAsset> assetDataArray = assetData.stream()
-         .map(this::createRequiredAsset)
-         .collect(Collectors.toList());
-
-      PartialDeploymentJarInfo info = new PartialDeploymentJarInfo();
-      info.setName(name);
-      info.setDeploymentDate(new Timestamp(System.currentTimeMillis()));
-      info.setOverwriting(overwriting);
-      info.setSelectedEntries(entryDataArray);
-      info.setDependentAssets(assetDataArray);
-
-      File zipfile = FileSystemService.getInstance().getCacheFile(name + ".zip");
-      DeployUtil.createExport(info, new FileOutputStream(zipfile));
-
-      return ExportJarProperties.builder()
-         .zipFilePath(zipfile.getPath())
-         .build();
-   }
-
-   private PartialDeploymentJarInfo.RequiredAsset createRequiredAsset(RequiredAssetModel model) {
-      PartialDeploymentJarInfo.RequiredAsset asset = new PartialDeploymentJarInfo.RequiredAsset();
-      asset.setPath(model.name());
-      asset.setType(model.type());
-      asset.setUser(model.user());
-      asset.setTypeDescription(model.typeDescription());
-      asset.setRequiredBy(model.requiredBy());
-      asset.setDetailDescription(model.detailDescription());
-      asset.setAssetDescription(model.assetDescription());
-      long lastModifiedTime = model.lastModifiedTime();
-
-      if(lastModifiedTime != 0) {
-         asset.setLastModifiedTime(lastModifiedTime);
-      }
-
-      return asset;
    }
 
    /**
@@ -646,7 +611,7 @@ public class DeployService {
       throws Exception
    {
       String filePath = properties.zipFilePath();
-      File file = FileSystemService.getInstance().getFile(filePath);
+      File file = fileSystemService.getFile(filePath);
 
       try(InputStream in = new FileInputStream(file)) {
          fn.accept(in);
@@ -687,7 +652,16 @@ public class DeployService {
             continue;
          }
 
-         List<String> subassets = findAssets(pattern);
+         List<String> subassets;
+
+         try {
+            subassets = findAssets(pattern);
+         }
+         catch(IllegalArgumentException e) {
+            LOG.warn("Skipping invalid pattern in findAssets: {}", pattern);
+            errPatterns.add(pattern);
+            continue;
+         }
 
          if(subassets == null || subassets.isEmpty()) {
             errPatterns.add(pattern);
@@ -708,7 +682,7 @@ public class DeployService {
          errStr = Tool.concat(errPatterns.toArray(new String[0]), '\n');
       }
 
-      results.add(0, errStr);
+      results.addFirst(errStr);
       return results;
    }
 
@@ -722,8 +696,8 @@ public class DeployService {
       try {
          AnalyticRepository repository = SUtil.getRepletRepository();
 
-         if(repository instanceof RepletEngine) {
-            ((RepletEngine) repository).importAssets(data, replace);
+         if(repository.isWrapperFor(RepletEngine.class)) {
+            repository.unwrap(RepletEngine.class).importAssets(data, replace);
          }
       }
       catch(Exception e) {
@@ -753,7 +727,7 @@ public class DeployService {
       List<String> assets = findAssets(patterns);
 
       if(!assets.isEmpty()) {
-         assets.remove(0);
+         assets.removeFirst();
       }
 
       return assets;
@@ -882,10 +856,10 @@ public class DeployService {
       }
 
       if(model.lastModifiedTime() != null) {
-         asset.setLastModifiedTime(model.lastModifiedTime().longValue());
+         asset.setLastModifiedTime(model.lastModifiedTime());
       }
 
-      if(asset != null && asset.getType() == ViewsheetAsset.VIEWSHEET) {
+      if(asset != null && Objects.equals(asset.getType(), ViewsheetAsset.VIEWSHEET)) {
          final String identifier = ((ViewsheetAsset) asset).getAssetEntry().toIdentifier();
          AssetEntry entry = getRegistryEntry(identifier, principal);
 
@@ -979,7 +953,7 @@ public class DeployService {
 
          if(assetType != null && isEntityPermitted(entity, assetType, principal)) {
             XAsset xAsset = SUtil.getXAsset(assetType,
-               RepletRegistryManager.splitMyReportPath(entity.path()), entity.user());
+                                            RepletRegistryService.splitMyReportPath(entity.path()), entity.user());
             Long lastModifiedTime = entity.lastModifiedTime();
 
             if(entity.type() == RepositoryEntry.VIEWSHEET) {
@@ -1043,7 +1017,7 @@ public class DeployService {
             principal, ResourceType.ASSET, unscopedPath, ResourceAction.ADMIN);
       }
       else if(xasset.getUser() != null) {
-         return principal.getName().equals(xasset.getUser().convertToKey()) || SecurityEngine.getSecurity().checkPermission(
+         return principal.getName().equals(xasset.getUser().convertToKey()) || securityEngine.checkPermission(
             principal, ResourceType.SECURITY_USER, xasset.getUser(), ResourceAction.ADMIN);
       }
       else {
@@ -1158,7 +1132,7 @@ public class DeployService {
    }
 
    private Stream<XAsset> getTableStyleAssets(String folder) {
-      LibManager manager = LibManager.getManager();
+      LibManager manager = libManagerProvider.getManager();
       Stream<XAsset> assets = Arrays.stream(manager.getTableStyles(folder))
          .map(XTableStyle::getName)
          .map(n -> new TableStyleAsset(n.replaceAll(LibManager.SEPARATOR, "/")));
@@ -1173,7 +1147,7 @@ public class DeployService {
    }
 
    private void sortRequired(List<RequiredAssetModel> models) {
-      models.sort(new Comparator<RequiredAssetModel>() {
+      models.sort(new Comparator<>() {
          @Override
          public int compare(RequiredAssetModel o1, RequiredAssetModel o2) {
             int result = getType(o1).compareTo(getType(o2));
@@ -1263,8 +1237,6 @@ public class DeployService {
       Pattern pattern = Pattern.compile(convertToReg(assetPath));
 
       try {
-         final IndexedStorage indexedStorage = IndexedStorage.getIndexedStorage();
-
          assets = indexedStorage.getKeys(Objects::nonNull)
             .stream()
             .map(AssetEntry::createAssetEntry)
@@ -1319,7 +1291,7 @@ public class DeployService {
    }
 
    private List<XAsset> searchDashboards(AssetSearchOptions opts) {
-      DashboardRegistry registry = DashboardRegistry.getRegistry(opts.user);
+      DashboardRegistry registry = dashboardRegistryManager.getRegistry(opts.user);
       Pattern pattern = Pattern.compile(convertToReg(opts.path));
       List<XAsset> assets = new ArrayList<>();
 
@@ -1339,7 +1311,7 @@ public class DeployService {
    private XAsset getModelXAsset(AssetEntry entry) {
       AssetEntry.Type type = entry.getType();
       String path = entry.getPath();
-      DataSourceRegistry registry = DataSourceRegistry.getRegistry();
+      DataSourceRegistry registry = dataSourceRegistry;
       String[] dsNames = registry.getDataSourceFullNames();
 
       if(type == AssetEntry.Type.LOGIC_MODEL ||
@@ -1451,11 +1423,17 @@ public class DeployService {
             throw new IllegalArgumentException("Invalid pattern string: " + patternStr);
          }
       }
+      else {
+         throw new IllegalArgumentException("Invalid pattern string: " + patternStr);
+      }
 
-      // escape characters
-      path = path.replace("^", "\\^");
-      path = path.replace("(", "\\(");
-      path = path.replace(")", "\\)");
+      if(path != null) {
+         // escape characters
+         path = path.replace("^", "\\^");
+         path = path.replace("(", "\\(");
+         path = path.replace(")", "\\)");
+      }
+
       return new AssetSearchOptions(global, user, type, path);
    }
 
@@ -1515,10 +1493,10 @@ public class DeployService {
          return types;
       }
 
-      private boolean global;
-      private String type;
-      private String path;
-      private IdentityID user;
+      private final boolean global;
+      private final String type;
+      private final String path;
+      private final IdentityID user;
    }
 
    private static final String SINGLE_ITEM_PATTERN = "[^/]+";
@@ -1527,6 +1505,12 @@ public class DeployService {
    private static final String USER_ASSET_PATTERN = "/user/([^/]+)/([^/]+)/(.+)";
    private final ContentRepositoryTreeService contentRepositoryTreeService;
    private final SecurityEngine securityEngine;
-   private final RepletRegistryManager registryManager = new RepletRegistryManager();
+   private final DataSourceRegistry dataSourceRegistry;
+   private final IndexedStorage indexedStorage;
+   private final DeployManagerService deployManagerService;
+   private final DashboardRegistryManager dashboardRegistryManager;
+   private final LibManagerProvider libManagerProvider;
+   private final FileSystemService fileSystemService;
+   private final RepletRegistryService registryManager;
    private static final Logger LOG = LoggerFactory.getLogger(DeployService.class);
 }
